Upgraded to SB 4.0.5 [WIP]